--- a/Pay/src/main/AndroidManifest.xml
+++ b/Pay/src/main/AndroidManifest.xml
@@ -1,2 +1,2 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.toocms.pay"></manifest>
+    package="com.toocms.tab.pay"></manifest>
