更改支付宝依赖包的依赖方式

--- a/Pay/build.gradle
+++ b/Pay/build.gradle
@@ -25,7 +25,7 @@ android {
 }
 
 dependencies {
-    implementation(name: 'alipaySdk-15.7.5-20200422171636-noUtdid', ext: 'aar')
+    api(name: 'alipaySdk-15.7.5-20200422171636-noUtdid', ext: 'aar')
     implementation "com.tencent.mm.opensdk:wechat-sdk-android-without-mta:${configs.version_wechat}"
     implementation "com.google.code.gson:gson:${configs.version_gson}"
 }
