更改支付宝依赖包的依赖方式

--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,9 @@ allprojects {
             url "https://jitpack.io"
             credentials { username authToken }
         }
+        flatDir {
+            dirs 'libs'
+        }
     }
 }
 
