--- a/Pay/build.gradle
+++ b/Pay/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'com.android.library'
-apply plugin: 'com.kezong.fat-aar'
 
 android {
     compileSdkVersion configs.compileSdkVersion
@@ -19,10 +18,8 @@ android {
     }
 }
 
-configurations.embed.transitive = true
-
 dependencies {
-    embedded fileTree(include: ['*.jar', '*.aar'], dir: 'libs')
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "com.tencent.mm.opensdk:wechat-sdk-android-without-mta:${configs.version_wechat}"
     implementation "com.google.code.gson:gson:${configs.version_gson}"
 }
