--- a/Pay/build.gradle
+++ b/Pay/build.gradle
@@ -10,6 +10,7 @@ android {
         versionCode configs.versionCode
         versionName configs.versionName
     }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -20,6 +21,8 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation "com.github.toocms-library:Tab:${configs.version_tab}"
+    implementation "androidx.appcompat:appcompat:${configs.version_appcompat}"
     implementation "com.tencent.mm.opensdk:wechat-sdk-android-without-mta:${configs.version_wechat}"
     implementation "com.google.code.gson:gson:${configs.version_gson}"
 }
