--- a/config.gradle
+++ b/config.gradle
@@ -4,11 +4,13 @@ ext {
             buildToolsVersion: "29.0.2",
             minSdkVersion    : 19,
             targetSdkVersion : 29,
-            versionCode      : 20200602,
-            versionName      : "3.0.0.200602-rc",
+            versionCode      : 20200706,
+            versionName      : "3.1.0",
 
             //open version control
+            version_tab      : "latest.release",
+            version_appcompat: "1.1.0",
             version_wechat   : "+",
-            version_gson     : "2.8.2",
+            version_gson     : "2.8.2"
     ]
 }
